# comfyui

./: .env.desktop.example  .env.example  .env.homelab.example  .gitignore  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile.certman  Dockerfile.code_executor  Dockerfile.comfyui  Dockerfile.langchain  Dockerfile.ollama  README.md  chatgpt.guidance.md  comfyui+ollama-quick-ref.md  comfyui-init.sh  context.md  docker-compose.desktop.yml  docker-compose.homelab.yml  docker-compose.openwebui.yml  docker-compose.single-node-gpu.yml  docker-compose.yml  giggidy.context.md  grok-4.1-guidance.md  grok4-guidance.md  healthcheck-comfyui.sh  healthcheck-langchain.sh  healthcheck-langflow.sh  healthcheck-ollama.sh  healthcheck-openwebui.sh  healthcheck-pipelines.sh  langchain_app.py  langflow-entrypoint.sh  langflow-init.sh  manage.sh  mesh-guide-2.md  mesh-guide.md  model-vault-Dockerfile  model-vault-context-b.md  model-vault-context.md  model-vault-integration-plan.md  (+8 more)
code_executor/: app.py
config/: model-vault.yaml  openwebui.env  versions.lock.yaml
docs/: api-reference.md  benchmarking.md  custom-container-build-research.md  custom-container-build-summary.md  desktop-gpu-worker-setup.md  docker-gpu-sharing.md  keycloak-sso.md  media-validation-plan.md  production-docker.md  ssl-automation.md  sso-baseline-users.md  sso-test-plan.md  troubleshooting.md  trusted-certs.md  user-guide.md  validation.md  vm-gpu-passthrough-setup.md
pipelines/: comfy_media_tools.py
src/: config.rs  database.rs  handlers.rs  main.rs  models.rs  storage.rs
tools/: backup-model-vault.sh  setup-sso.sh  (+27 more)
(+46 files in other folders)
