[package]
name = "model-vault"
version = "0.1.0"
edition = "2021"
description = "Secure AI model vault service"
authors = ["ComfyUI/Ollama Stack"]
license = "MIT"

[[bin]]
name = "certman"
path = "src/bin/certman.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
tower-http = { version = "0.5", features = ["auth", "cors", "fs", "trace"] }
rcgen = "0.12"
pem = "3.0"
time = "0.3"